--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap": "^4.5.2",
         "bootstrap-vue": "^2.17.3",
         "vform": "^1.0.1",
-        "vue-js-modal": "^2.0.0-rc.6"
+        "vue-js-modal": "^2.0.0-rc.6",
+        "vue-slick-carousel": "^1.0.6"
     }
 }
