--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1",
         "bootstrap": "^4.5.2",
         "bootstrap-vue": "^2.17.3",
         "vform": "^1.0.1",
