--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
         "portal-vue": "^2.1.7",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.2",
         "tailwindcss": "^1.3.0",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.1",
         "bootstrap": "^4.5.2",
         "bootstrap-vue": "^2.17.3",
+        "node-sass": "^4.14.1",
         "vform": "^1.0.1",
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-slick-carousel": "^1.0.6"
